--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" aria-multiline="true" content="Miles Mickelsons 
+  Fullstack Web Developer / Software Engineer portfolio website. Illustrates 
+  skills, proficiencies, credentials, and a little about me.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Miles Mickelson</title>
