--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
   skills, proficiencies, credentials, and a little about me.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#890e08"/>
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png" disabled>
-  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png" disabled>
-  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png" disabled>
-  <link rel="manifest" href="../site.webmanifest" disabled>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" disabled>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" disabled>
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" disabled>
+  <link rel="manifest" href="/site.webmanifest" disabled>
   <link rel="preload" href="./fonts/NugieRegular.ttf" as="font" type="font/ttf" media="all" onload="this.onload=null;this.rel='stylesheet'"  crossorigin="anonymous" disabled>
   <link rel="preload" href="./fonts/NugieItalic.ttf" as="font" type="font/ttf"  media="all" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous" disabled>
 </head>
