--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#b91d47">
   <link rel="preload" href="./fonts/NugieRegular.ttf" as="font" type="font/ttf" media="all" onload="this.onload=null;this.rel='stylesheet'"  crossorigin="anonymous" disabled>
   <link rel="preload" href="./fonts/NugieItalic.ttf" as="font" type="font/ttf"  media="all" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous" disabled>
-  <link rel="CNAME" media="all" href="/CNAME">
+  <link rel="CNAME" media="all" href="../CNAME">
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
