--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
   <link rel="manifest" href="../site.webmanifest">
+  <link rel="browserconfig" href="../browserconfig.xml">
   <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#b91d47">
   <link rel="preload" href="./fonts/NugieRegular.ttf" as="font" type="font/ttf" media="all" onload="this.onload=null;this.rel='stylesheet'"  crossorigin="anonymous" disabled>
   <link rel="preload" href="./fonts/NugieItalic.ttf" as="font" type="font/ttf"  media="all" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous" disabled>
