--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="msapplication-TileColor" content="#b91d47">
   <meta name="theme-color" content="#ffffff">
+  <script src="index.js" defer></script>
+  <link rel="CNAME" media="all" href="../CNAME">
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
@@ -23,9 +25,6 @@
   <link rel="manifest" href="../site.webmanifest">
   <link rel="browserconfig" href="../browserconfig.xml">
   <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#b91d47">
-  <link rel="preload" href="./fonts/NugieRegular.ttf" as="font" type="font/ttf" media="all" onload="this.onload=null;this.rel='stylesheet'"  crossorigin="anonymous" disabled>
-  <link rel="preload" href="./fonts/NugieItalic.ttf" as="font" type="font/ttf"  media="all" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous" disabled>
-  <link rel="CNAME" media="all" href="../CNAME">
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
@@ -33,6 +32,5 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div id="root"></div>
-  <script src="index.js"></script>
 </body>
 </html>
