updates optimized social media appearance, adds new article links, edits some contents grammar

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,12 @@
   <!-- End Google Tag Manager -->
   <title>Miles Mickelson's Portfolio</title>
   <meta charset="UTF-8">
-  <meta name="description" aria-multiline="true" content="Miles Mickelsons 
-  Fullstack Web Developer / Software Engineer portfolio website. Illustrates 
-  skills, proficiencies, credentials, and a little about me.">
+  <meta name="description" aria-multiline="true" content="My Fullstack Web and Software Developer portfolio website. Illustrates skills, publications, experience, and sheds some light on who I am.">
+  <meta property="og:title" content="Miles Mickelson's Portfolio Website">
+  <meta property="og:description" content="Illustrates skills, publications, experience, and sheds some light on who I am.">
+  <meta property="og:image" content="./images/ogimage.jpg">
+  <meta property="og:url" content="MilesMickelson.com">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="msapplication-TileColor" content="#b91d47">
   <meta name="theme-color" content="#ffffff">
