updated with new portfolio and resume content and fixes some small errors

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
   <!-- End Google Tag Manager -->
   <title>Miles Mickelson's Portfolio</title>
   <meta charset="UTF-8">
-  <meta name="description" aria-multiline="true" content="My Fullstack Web and Software Developer portfolio website. Illustrates skills, publications, experience, and sheds some light on who I am.">
+  <meta name="description" aria-multiline="true" content="My Web Developing and Software Engineering portfolio site, where you can find an outline of my skills, credentials, some helpful resources, and a little info about me.">
   <meta property="og:title" content="Miles Mickelson's Portfolio Website">
-  <meta property="og:description" content="Illustrates skills, publications, experience, and sheds some light on who I am.">
+  <meta property="og:description" content="Illustrates Web and Software Developing skills, credentials, publications, and a little info about me.">
   <meta property="og:image" content="./images/ogimage.jpg">
   <meta property="og:url" content="MilesMickelson.com">
   <meta name="twitter:card" content="summary_large_image">
